--- a/Designer/Interface/Bindings/NamedPipe.xaml
+++ b/Designer/Interface/Bindings/NamedPipe.xaml
@@ -1,8 +1,8 @@
 ﻿<Grid x:Class="NETPath.Interface.Bindings.NamedPipe" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
 	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
@@ -51,13 +51,13 @@
 		</Grid.ColumnDefinitions>
 		<Label Grid.Column="0" Content="Timeouts" FontSize="12pt" Margin="0,5,0,0" />
 		<Label Content="Open Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
-		<sf:TimeSpanEdit Value="{Binding Path=Binding.OpenTimeout, Mode=TwoWay}" Name="OpenTimeout" Margin="105,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" Height="24" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" FontSize="10pt" />
+		<pc:TimeSpanTextBox Value="{Binding Path=Binding.OpenTimeout, Mode=TwoWay}" Name="OpenTimeout" Margin="105,5,5,5" Height="24" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" FontSize="10pt" />
 		<Label Content="Close Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<sf:TimeSpanEdit Value="{Binding Path=Binding.CloseTimeout, Mode=TwoWay}" Name="CloseTimeout" Margin="105,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" Height="24" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
+		<pc:TimeSpanTextBox Value="{Binding Path=Binding.CloseTimeout, Mode=TwoWay}" Name="CloseTimeout" Margin="105,5,5,5" Height="24" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
 		<Label Content="Send Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
-		<sf:TimeSpanEdit Value="{Binding Path=Binding.SendTimeout, Mode=TwoWay}" Name="SendTimeout" Margin="105,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" Height="24" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" FontSize="10pt" />
+		<pc:TimeSpanTextBox Value="{Binding Path=Binding.SendTimeout, Mode=TwoWay}" Name="SendTimeout" Margin="105,5,5,5" Height="24" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" FontSize="10pt" />
 		<Label Content="Receive Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="1" />
-		<sf:TimeSpanEdit Value="{Binding Path=Binding.ReceiveTimeout, Mode=TwoWay}" Name="ReceiveTimeout" Margin="115,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" Height="24" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="1" FontSize="10pt" />
+		<pc:TimeSpanTextBox Value="{Binding Path=Binding.ReceiveTimeout, Mode=TwoWay}" Name="ReceiveTimeout" Margin="115,5,5,5" Height="24" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="1" FontSize="10pt" />
 	</Grid>
 	<Grid Grid.Row="6">
 		<Grid.RowDefinitions>
@@ -78,7 +78,7 @@
 		<Label Content="Max Received Message Size:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
 		<pc:TextBox Text="{Binding Path=Binding.MaxReceivedMessageSize, Converter={StaticResource LongConverter}}" Name="MaxReceivedMessageSize" Height="23" Margin="180,5,5,5" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" Validate="MaxReceivedMessageSize_Validate" />
 		<Label Content="Max Connections:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="1" />
-		<sf:IntegerTextBox Value="{Binding Path=Binding.MaxConnections}" Margin="125,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Name="MaxConnections" Grid.Column="3" Grid.Row="1" FontSize="10pt" />
+		<pc:IntegerTextBox Value="{Binding Path=Binding.MaxConnections}" Margin="125,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Name="MaxConnections" Grid.Column="3" Grid.Row="1" FontSize="10pt" />
 	</Grid>
 	<Grid Grid.Row="7">
 		<Grid.RowDefinitions>
