--- a/Designer/Interface/Host/Endpoint.xaml
+++ b/Designer/Interface/Host/Endpoint.xaml
@@ -1,10 +1,9 @@
 ﻿<Grid x:Class="NETPath.Interface.Host.Endpoint" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
 	xmlns:pc="http://schemas.ellipticbit.com/controls"
-	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	xmlns:Host="clr-namespace:NETPath.Interface.Host"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	d:DesignHeight="400" d:DesignWidth="600" >
@@ -59,7 +58,7 @@
 		<pc:TextBox Text="{Binding Path=Data.ServerAddress}" Name="ServerAddress" Height="23" Margin="65,5,5,5" VerticalAlignment="Top" LabelText="Use Machine Name" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="{Binding Path=Data.ServerAddress}" />
 		<ToggleButton IsChecked="{Binding Path=Data.ServerAddressIsVariable}" Content="Server Address Is Variable" Margin="5" Grid.Column="2" Grid.Row="1" />
 		<Label Content="Port:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="0" Grid.Row="2" />
-		<sf:IntegerTextBox Margin="65,5,5,5" Value="{Binding Path=Data.ServerPort}" Grid.Row="2" Name="ServerPort" HorizontalContentAlignment="Left" />
+		<pc:IntegerTextBox Margin="65,5,5,5" Value="{Binding Path=Data.ServerPort}" Grid.Row="2" Name="ServerPort" HorizontalContentAlignment="Left" />
 		<ToggleButton IsChecked="{Binding Path=Data.ServerUseHTTPS}" Content="Use HTTPS" Margin="5" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" />
 	</Grid>
 	<Grid Grid.Row="3" >
