--- a/Designer/Interface/Host/ThrottlingBehavior.xaml
+++ b/Designer/Interface/Host/ThrottlingBehavior.xaml
@@ -1,10 +1,9 @@
 ﻿<Grid x:Class="NETPath.Interface.Host.ThrottlingBehavior" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
 	xmlns:pc="http://schemas.ellipticbit.com/controls"
-	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	d:DesignHeight="350" d:DesignWidth="450" >
 	<Grid.RowDefinitions>
 		<RowDefinition Height="Auto" />
@@ -32,10 +31,10 @@
 		<pc:TextBox Text="{Binding Path=Data.Name}" Name="DisplayName" Height="23" Margin="60,5,5,5" VerticalAlignment="Top" ToolTip="{Binding Path=Data.Name, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" TextChanged="Name_TextChanged" Validate="Name_Validate" />
 		<ToggleButton Content="Is Default Behavior" Height="23" IsChecked="{Binding Path=Data.IsDefaultBehavior}" Margin="5" Name="IsDefaultBehavior" VerticalAlignment="Top" Grid.Column="2" />
 		<Label Content="Max Concurrent Calls:" Height="Auto" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="2" />
-		<sf:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentCalls}" VerticalAlignment="Top" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Left" Name="MaxConcurrentCalls" />
+		<pc:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentCalls}" VerticalAlignment="Top" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Left" Name="MaxConcurrentCalls" />
 		<Label Content="Max Concurrent Instances:" Height="Auto" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="3" />
-		<sf:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentInstances}" VerticalAlignment="Top" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"  HorizontalContentAlignment="Left" Name="MaxConcurrentInstances" />
+		<pc:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentInstances}" VerticalAlignment="Top" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"  HorizontalContentAlignment="Left" Name="MaxConcurrentInstances" />
 		<Label Content="Max Concurrent Sessions:" Height="28" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalContentAlignment="Center" Grid.Row="4" />
-		<sf:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentSessions}" VerticalAlignment="Top" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Left" Name="MaxConcurrentSessions" />
+		<pc:IntegerTextBox Margin="5" Value="{Binding Path=Data.MaxConcurrentSessions}" VerticalAlignment="Top" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Left" Name="MaxConcurrentSessions" />
 	</Grid>
 </Grid>
