--- a/Designer/Interface/Wcf/Dialogs/NewItem.xaml
+++ b/Designer/Interface/Wcf/Dialogs/NewItem.xaml
@@ -6,6 +6,7 @@
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	MinWidth="1000"
 	mc:Ignorable="d" d:DesignHeight="400" d:DesignWidth="1200" >
 	<Grid.Resources>
 		<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
